# chronusq_dev_test

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITE.txt  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build_docker_images.yml  docker_action.yml  docker_action_local.yml
.gitlab/issue_templates/: Bug.md  Enhancement.md
.gitlab/merge_request_templates/: Bug.md  Enhancement.md
cmake/: Boost.cmake  CQHelperFunctions.cmake  CQTestGeneration.cmake  FindLibXC.cmake  FindLibint.cmake  FindTiledArray.cmake  HandleCXXFlags.cmake  HandleGTest.cmake  HandleLA.cmake  HandleLibcint.cmake  HandleLibint.cmake  HandleMPI.cmake  HandleTiledArray.cmake
include/: aointegrals.hpp  atom.hpp  basisset.hpp  cerr.hpp  chronusq_config.hpp.in  chronusq_sys.hpp  cibuilder.hpp  corehbuilder.hpp  coupledcluster.hpp  cqlinalg.hpp  cubegen.hpp  custom_storage.hpp  detstringmanager.hpp  dft.hpp  electronintegrals.hpp  extrapolate.hpp  fields.hpp  findiff.hpp  fockbuilder.hpp  geometrymodifier.hpp  hamiltonianoptions.hpp  integrals.hpp  interpolate.hpp  itersolver.hpp  libcint.hpp  matrix.hpp  mcscf.hpp  mcwavefunction.hpp  memmanager.hpp  modifyorbitals.hpp  mointstransformer.hpp  molecularoptions.hpp  molecule.hpp  morspec.hpp  orbitalrotation.hpp  orthogonalization.hpp  particleintegrals.hpp  physcon.hpp  quantum.hpp  realtime.hpp  (+3 more)
include/aointegrals/: contract.hpp  giaointegrals.hpp  impl.hpp  inhouseaointegral.hpp  print.hpp
include/basisset/: basisset_def.hpp  basisset_util.hpp  reference.hpp
include/cibuilder/: casci.hpp  impl.hpp  rasci.hpp
include/corehbuilder/: fourcomp.hpp  impl.hpp  matrixcoreh.hpp  nonrel.hpp  x2c.hpp
include/coupledcluster/: CCSD.hpp  DiskDIIS.hpp
include/cqlinalg/: blas1.hpp  blas3.hpp  blasext.hpp  blasutil.hpp  cqlinalg_config.hpp  eig.hpp  factorization.hpp  matfunc.hpp  ortho.hpp  solve.hpp  svd.hpp  util.hpp
include/cxxapi/: boilerplate.hpp  input.hpp  options.hpp  output.hpp  procedural.hpp
include/detstringmanager/: casstringmanager.hpp  detstring.hpp  excitationlist.hpp  impl.hpp  rasstringmanager.hpp  stringpermutator.hpp
include/dft/: epc.hpp  libxc_wrappers.hpp  neo_epc.hpp  util.hpp
include/dynamicsdriver/: ehrenfest.hpp
include/electronintegrals/: aooneeints.hpp  gradints.hpp  inhouseaointegral.hpp  multipoleints.hpp  oneeints.hpp  print.hpp  relativisticints.hpp  twoeints.hpp  vectorints.hpp
include/findiff/: geomgrad.hpp  impl.hpp
include/fockbuilder/: fourcompfock.hpp  impl.hpp  matrixfock.hpp  neofock.hpp  rofock.hpp
include/geometrymodifier/: moleculardynamics.hpp  singlepoint.hpp
include/grid/: integrator.hpp  quadrature.hpp
include/integrals/: impl.hpp
include/itersolver/: davidson.hpp  gmres.hpp  gplhr.hpp  impl.hpp  iterdiagonalizer.hpp  iterlinearsolver.hpp
include/matrix/: paulispinormatrices.hpp  scaledmatrix.hpp  squarematrix.hpp
include/mcscf/: cisolver.hpp  impl.hpp  print.hpp  rdm.hpp
include/mcwavefunction/: base.hpp  impl.hpp  moints.hpp  print.hpp  property.hpp  rdm.hpp
include/modifyorbitals/: compositeSCF.hpp  conventionalSCF.hpp  impl.hpp  newtonRaphsonSCF.hpp  optOrbitals.hpp  skipSCF.hpp
include/mointstransformer/: hcore.hpp  impl.hpp  incore.hpp  moranges.hpp  ssfock.hpp  tpi_incore_n5.hpp  tpi_ssfock.hpp
include/nonlinearopt/: bfgs.hpp  goldenSection.hpp  nonlinearopt.hpp
include/orbitalrotation/: fock.hpp  gradient.hpp  hessian.hpp  impl.hpp  ivo.hpp
include/orthogonalization/: impl.hpp
include/particleintegrals/: gradints.hpp  inhouseaointegral.hpp  multipoleints.hpp  onepints.hpp  print.hpp  twopints.hpp  vectorints.hpp
include/quantum/: base.hpp  impl.hpp  preprocessor.hpp  print.hpp  (+1 more)
src/: CMakeLists.txt
tests/: CMakeLists.txt  ut.cxx  ut.hpp.in
tests/scf/: CMakeLists.txt  cediis.cxx  fourcomphf.cxx  ghf.cxx  ghf_giao.cxx  ks.cxx  misc.cxx  neo_rhf.cxx  neo_rks.cxx  qn.cxx  rhf.cxx  rhf_giao.cxx  rhfnr.cxx  ri.cxx  rks.cxx  rohf.cxx  rohf_giao.cxx  scf.hpp  uhf.cxx  uhf_giao.cxx  uks.cxx  x2chf.cxx  x2cks.cxx
tests/scf/cediis/: bfgs-test.hpp  goldenSection-test.hpp  interpolate-test.hpp
tests/scf/parallel/fourcomp/: Ag_sapporoDZ_DCG.inp  CuH3_321g_DCG.inp  UPu_184+_P_DCG_finitenuc.inp  UPu_184+_P_DCG_pointnuc.inp  UPu_184+_P_DC_finitenuc.inp  UPu_184+_P_DC_finitenuc_direct.inp  UPu_184+_P_DC_pointnuc.inp  UPu_184+_P_NR_pointnuc.inp
tests/scf/parallel/ri_x2c/: cd_sap-dz-dkh3-2012-sp_x2c-jfit.inp  hg_sap-dz-dkh3-2012-sp_x2c-jfit.inp  hg_sap-dz-dkh3-2012-sp_x2c-jfit_b3lyp.inp
tests/scf/parallel/rohf/: oxygen_6-31Gd.inp
tests/scf/parallel/rohf_giao/: h2_triplet_rohf_giao_631G.inp
tests/scf/parallel/x2c/: UPu_183+_P_DCGGS_fockX2C.inp  hg_sap_dz_dkh3_2012_sp.inp  water_6-311+Gdp_sph.inp
tests/scf/reference/: HeKr_sto-3G.bin.ref  KCaKr_sto-3G.bin.ref  UPu_184+_P_DC_X2CGuess_pointnuc.bin.ref  UPu_184+_P_DC_pointnuc.bin.ref  cd_sap_dz_dkh3_2012_sp.bin.ref  cd_sap_dz_dkh3_2012_sp_b3lyp.bin.ref  cd_sap_dz_dkh3_2012_sp_slater.bin.ref  zn_sap_dz_dkh3_2012_sp.bin.ref  zn_sap_dz_dkh3_2012_sp_b3lyp.bin.ref  zn_sap_dz_dkh3_2012_sp_slater.bin.ref
tests/scf/serial/fourcomp/: Ag_sapporoDZ_DCG.inp  CuH3_321g_DCG.inp  UPu_184+_P_DCG_finitenuc.inp  UPu_184+_P_DCG_pointnuc.inp  UPu_184+_P_DC_X2CGuess_pointnuc.inp  UPu_184+_P_DC_finitenuc.inp  UPu_184+_P_DC_finitenuc_direct.inp  UPu_184+_P_DC_pointnuc.inp  UPu_184+_P_NR_pointnuc.inp
tests/scf/serial/ghf/: KCaKr_sto-3G.inp
tests/scf/serial/neo_rhf/: water_STO-3G_prot_SP.inp
tests/scf/serial/neo_rks/: water_STO-3G_prot_SP_b3lyp_epc17.inp
tests/scf/serial/rhf/: water_6-31Gd_inBasis.inp
tests/scf/serial/ri_x2c/: cd_sap-dz-dkh3-2012-sp_x2c-jfit.inp  hg_sap-dz-dkh3-2012-sp_x2c-jfit.inp  hg_sap-dz-dkh3-2012-sp_x2c-jfit_b3lyp.inp
tests/scf/serial/uhf/: KCaKrK_sto-3G.inp  li_6-31Gd_inBasis.inp
tests/scf/serial/x2c/: Ag2_sto-3g_ALH.inp  Ag2_sto-3g_ALU.inp  AgBr_sto-3g_DLH.inp  AgBr_sto-3g_DLU.inp  UPu_183+_P_DCGGS_fockX2C.inp  U^91+_defBasis.inp  cd_sap_dz_dkh3_2012_sp.inp  cd_sap_dz_dkh3_2012_sp_b3lyp.inp  cd_sap_dz_dkh3_2012_sp_slater.inp  hg_sap_dz_dkh3_2012_sp.inp  water_6-311+Gdp_sph.inp
(+399 files in other folders)
